# metada

./: .clang-format  .cursorrules  .fprettify.rc  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  vcpkg.json
applications/data_assimilation/ensemble/: CMakeLists.txt  a4denvar.cpp  config.json  config.yaml  enkf.cpp  etkf.cpp  etkf.json  etkf.yaml  letkf.cc  letkf.cpp  letkf.json  letkf.yaml  lwenkf.cpp  macometkf.yaml  main.cpp  particle_filter.cpp  variational.cpp
applications/data_assimilation/variational/: CMakeLists.txt  incremental_variational.cpp  tl_ad_checks.cpp  variational.cpp
applications/forecast/: CMakeLists.txt  config.yaml  forecast.cpp  macom_config.yaml
applications/obs_processing/: CMakeLists.txt  config.yaml  obs_processing.cpp  prepbufr_config  prepbufr_constants.f90  prepbufr_constants.mod  prepbufr_data.f90  prepbufr_data.mod  prepbufr_utils.f90  prepbufr_utils.mod  read_prepbufr.f90  read_prepbufr.prm  readpb_config.f
docs/: CMakeLists.txt  incremental_variational_formulation.md  metada_wrfda_cg_alignment.md  modules.md  wrfda_minimise_cg_workflow.md
docs/doxygen/: CMakeLists.txt  Doxyfile
docs/sphinx/: CMakeLists.txt  conf.py  index.rst  installation.rst  lorenz95.rst  references.rst  requirements.txt
docs/sphinx/design/: architecture.rst  components.rst  existing_systems.rst  index.rst  philosophy.rst
docs/sphinx/installation/: container.rst  index.rst  linux.rst  macos.rst  windows.rst
docs/sphinx/references/: index.rst
macomtest/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/applications/: CMakeLists.txt  forecast.cpp
src/applications/ensemble/: CMakeLists.txt  letkf.cc
src/backends/: CMakeLists.txt
src/backends/adapters/: CMakeLists.txt
src/backends/common/: CMakeLists.txt
src/backends/gmock/: CMakeLists.txt  MockBackgroundErrorCovariance.hpp  MockConfig.hpp  MockEnsemble.hpp  MockGeometry.hpp  MockGeometryIterator.hpp  MockGridPoint.hpp  MockIncrement.hpp  MockLogger.hpp  MockModel.hpp  MockObsIO.hpp  MockObsOperator.hpp  MockObservation.hpp  MockObservationIterator.hpp  MockState.hpp
src/backends/interfaces/: CMakeLists.txt  Lorenz63.hpp  lorenz63_fortran.h
src/backends/lite/: CMakeLists.txt  LiteBEC.hpp  LiteGeometry.hpp  LiteIncrement.hpp  LiteModel.hpp  LiteObs.hpp  LiteObsOperator.hpp  LiteState.hpp
src/backends/logging/: GoogleLogger.h
src/backends/lorenz63/: CMakeLists.txt
src/backends/macom/: CMakeLists.txt  MACOMBackgroundErrorCovariance.hpp  MACOMGeometry.hpp  MACOMGeometryIterator.hpp  MACOMModel.hpp  MACOMObsOperator.hpp  MACOMObservation.hpp  MACOMParallel.hpp  MACOMState.hpp  namefc_macom.f90
src/backends/repr/: CMakeLists.txt  MockState.hpp
src/backends/simple/: CMakeLists.txt  SimpleBackgroundErrorCovariance.hpp  SimpleEnsemble.hpp  SimpleGeometry.hpp  SimpleGeometryIterator.hpp  SimpleIncrement.hpp  SimpleModel.hpp  SimpleObsOperator.hpp  SimpleObservation.hpp  SimpleState.hpp  SimpleStateIterator.cpp  SimpleStateIterator.hpp
src/backends/temp/: FortranInterface.cpp  MACOMModel.cpp  fortran_interface.f90
src/backends/tools/: CMakeLists.txt
src/backends/wrf/: CMakeLists.txt  Geometry.cpp  Geometry.hpp  GeometryIterator.cpp  GeometryIterator.hpp  Model.cpp  Model.hpp  State.cpp  State.hpp  WRFBackendTraits.hpp  WRFBackgroundErrorCovariance.hpp  WRFConfigBridge.cpp  WRFConfigBridge.hpp  WRFControlVariable.hpp  WRFDACV5ControlVariableBackend.hpp  WRFDAControlVariableBackendFactory.hpp  WRFDAObservation.hpp  WRFDAObservationIterator.hpp  WRFGeometry.cpp  WRFGeometry.hpp  WRFGeometryIterator.cpp  WRFGeometryIterator.hpp  WRFGridInfo.hpp  WRFIncrement.hpp  WRFModel.cpp  WRFModel.hpp  WRFObsOperator.hpp  WRFObservation.hpp  WRFState.cpp  WRFState.hpp  wrf_config_bridge.F90
src/core/: CMakeLists.txt
src/core/logging/: Logger.h
src/framework/: CMakeLists.txt
src/framework/adapters/: BackgroundErrorCovariance.hpp  BackgroundErrorCovarianceConcepts.hpp  CMakeLists.txt  CommonConcepts.hpp  ControlVariable.hpp  ControlVariableConcepts.hpp  CostFunction.hpp  Ensemble.hpp  Geometry.hpp  Geometry.ixx  GeometryConcepts.hpp  GeometryIterator.hpp  GeometryIterator.ixx  GeometryIteratorConcepts.hpp  GeometryPointIterator.hpp  GeometryPointIterator.ixx  Increment.hpp  IncrementConcepts.hpp  IncrementalCostFunction.hpp  IncrementalMinimization.hpp  Minimization.hpp  Model.hpp  ModelConcepts.hpp  ObsOperator.hpp  ObsOperatorConcepts.hpp  Observation.hpp  ObservationConcepts.hpp  ObservationIterator.hpp  ObservationIteratorConcepts.hpp  State.hpp  StateConcepts.hpp
src/framework/algorithms/: A4DEnVar.hpp  CMakeLists.txt  ETKF.hpp  EnKF.hpp  IncrementalGradientChecks.hpp  IncrementalOperatorChecks.hpp  IncrementalVariational.hpp  LETKF.cpp  LETKF.hpp  LWEnKF.hpp  Metrics.hpp  OperatorChecks.hpp  ParticleFilter.hpp  ProgressBar.hpp  README_A4DEnVar.md  README_EnKF.md  README_LWEnKF.md  README_ParticleFilter.md  Variational.hpp
src/framework/base/: CMakeLists.txt  ConjugateGradientOptimizer.hpp  ControlVariableBackend.hpp  ControlVariableBackendFactory.hpp  DateTime.cpp  DateTime.hpp  Duration.cpp  Duration.hpp  IdentityControlVariableBackend.hpp  LBFGSOptimizer.hpp  Location.hpp  NonCopyable.hpp  OptimizerBase.hpp  PointObservation.hpp  SteepestDescentOptimizer.hpp  UnitNumberManager.hpp  WRFDAConjugateGradientOptimizer.hpp  isValidValue.hpp
src/framework/common/: CMakeLists.txt
src/framework/core/: ApplicationContext.hpp  CMakeLists.txt  DateTime.cpp  DateTime.hpp  (+2 more)
src/helpers/: helper_cuda.h  helper_string.h
src/traits/: BackendTags.hpp  BackendTraits.hpp  CMakeLists.txt  L63BackendTraits.hpp  LiteBackendTraits.hpp  MACOMBackendTraits.hpp  MockBackendTraits.hpp  SimpleBackendTraits.hpp  WRFBackendTraits.hpp
tests/: CMakeLists.txt  cuda_test.cpp  device_query_test.cpp  glog_test.cpp  lorenz95.py  lorenz95_python_test.cpp
tests/cuda/: CMakeLists.txt  cuda_test.cpp  device_query_test.cpp
tests/framework/: CMakeLists.txt
tests/logging/: CMakeLists.txt  glog_test.cpp  logging_test.cpp
tests/python/: CMakeLists.txt  lorenz95.py  lorenz95_python_test.cpp
(+567 files in other folders)
